libretranslate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: libretranslate
  namespace: libretranslate
spec:
  type: ClusterIP
  selector:
    app: libretranslate
  ports:
    - name: http
      port: 5000
      targetPort: http
